[tool.poetry]
name = "st_codemirror_diff"
version = "0.1.0"
description = "Streamlit codemirror wrapper, exposing the diff capability"
authors = ["Chandan Prasad M <prasad.chandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.74.1"

[tool.poetry.dev-dependencies]
watchdog = "^1.0.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
